@@ -1,3 +1,10 @@
+2015-02-17  Vanessa Gil <vanessa.gil@artica.es>
+	
+	* include/functions_form.php
+	  operation/incidents/incident_detail.php
+	  operation/incidents/incident_search_logic.php: Fixed problem
+	when show advanced options in ticket search.
+
 2015-02-16  Vanessa Gil <vanessa.gil@artica.es>
 	
 	* include/functions_inventories.php: Fixed bug
